<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/update_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/update_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:drawableLeft="@drawable/ic_person_18_black"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/update_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_username_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/update_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:drawableLeft="@drawable/ic_email_18_black"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/update_original_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_email_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/update_original_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:drawableLeft="@drawable/ic_lock_open_18_black"
            android:ems="10"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/update_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_original_password_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/update_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:drawableLeft="@drawable/ic_lock_outline_18_black"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/update_confirm_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_password_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/update_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:drawableLeft="@drawable/ic_lock_outline_18_black"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/update_subjects"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_confirm_password_layout"
        android:drawableLeft="@drawable/ic_subject_18_black"
        android:text="@string/subjects" />

    <Button
        android:id="@+id/update_languages"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/update_confirm_password_layout"
        android:layout_gravity="right"
        android:drawableLeft="@drawable/ic_language_18_black"
        android:text="@string/languages" />

    <Button
        android:id="@+id/update_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/update_subjects"
        android:drawableLeft="@drawable/ic_save_18_black"
        android:text="@string/save" />

</RelativeLayout>