<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:elevation="0dp">

    <Button
        android:id="@+id/home_btn_select_subjects"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_subject_18_black"
        android:text="@string/subjects"
        android:layout_above="@+id/home_btn_search_discussion"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="52dp" />

    <Button
        android:id="@+id/home_btn_select_language"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:drawableLeft="@drawable/ic_language_18_black"
        android:text="@string/languages"
        android:layout_alignTop="@+id/home_btn_select_subjects"
        android:layout_alignEnd="@+id/home_btn_search_discussion" />

    <Button
        android:id="@+id/home_btn_search_discussion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_search_18_black"
        android:text="@string/search_discussion"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/home_btn_select_subjects"
        android:layout_alignEnd="@+id/home_btn_select_language"
        android:backgroundTint="#ffffff"
        android:src="@mipmap/ic_launcher"
        android:elevation="0dp" />

</RelativeLayout>